# gladiapp

./: .gitignore  API_KEY_SETUP.md  CMakeLists.txt  LICENSE  README  README.md  vcpkg.json
examples/: CMakeLists.txt
examples/common/: apiKeyLoader.hpp
examples/example-rest/: CMakeLists.txt  main.cpp
examples/example-ws/: CMakeLists.txt  main.cpp
gladiapp/: CMakeLists.txt  gladiapp_rest.cpp  main.cpp
gladiapp/include/gladiapp/: gladia_ws_request.hpp  gladiapp.hpp  gladiapp_error.hpp  gladiapp_rest.hpp  gladiapp_rest_request.hpp  gladiapp_rest_response.hpp  gladiapp_ws.cpp  gladiapp_ws.hpp  gladiapp_ws_request.hpp  gladiapp_ws_response.hpp  json_optional.hpp  utils.hpp
gladiapp/include/gladiapp/impl/: curl_http_util.hpp  gladia_rest_client_boost_impl.hpp  gladia_rest_client_curl_impl.hpp  gladia_ws_client_boost_impl.hpp  gladia_ws_client_curl_impl.hpp
gladiapp/src/: gladiapp_error.cpp  gladiapp_rest.cpp  gladiapp_rest_request.cpp  gladiapp_rest_response.cpp  gladiapp_ws.cpp  gladiapp_ws_request.cpp  gladiapp_ws_response.cpp
scripts/: run_example.sh.in
